--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint-config-next": "15.2.4",
+    "ignore-loader": "^0.1.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
